[update] index.html

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="hero-body">
             <img src="./assets/images/fig_teaser.png" style="width:600px; margin-bottom:10px" alt="Teaser."/>
             <p style="margin-top: 0;">
-              <b> An Example of Evaluation Agent.</b> Unlike existing methods that rely on time-consuming sampling and fixed criteria with no explanation, the Evaluation Agent provides efficient, adaptive, and explainable evaluations tailored to user queries. It evaluates a model’s ability to generate visual content, including objects, attributes, and spatial relationships, to meet specific objectives.
+              <b> An Example of Evaluation Agent.</b> Existing evaluation methods typically assess visual generative models by extensively sampling from a fixed benchmark. In contrast, our Evaluation Agent framework requires only a small number of sampled images or videos, tailored to the user's specific evaluation request. Additionally, it goes beyond providing a simple numerical score by offering detailed explanations to the evaluation conclusions.
             </p>
     </div>
   </div>
