--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 <!-- Abstract. -->
 <section>
-  <div class="container is-max-desktop" style="width: 35%; max-width: none;">
+  <div class="container is-max-desktop" style="width: 30%; max-width: none;">
     <div class="columns is-centered has-text-centered" style="margin-top: 10px; margin-bottom: 0px;">
       <div class="column is-four-fifths">
         <h2 class="title is-3 is-centered">Abstract</h2>
@@ -335,7 +335,7 @@
         </div>
     </div>
 
-    <div class="section-title" style="margin-top:-10px;">
+    <div class="section-title" style="margin-top:-20px;">
       <h4 class="title is-5 is-centered">Compare Time Consumption on the VBench</h5>
     </div>
     <div class="table-container" style="text-align: center;">
@@ -452,7 +452,7 @@
 </section>
 
 <!-- Open Queries Set -->
-<section class="section" style="margin-top:-80px; margin-bottom:30px;">
+<section class="section" style="margin-top:-95px; margin-bottom:30px;">
   <div class="container is-max-desktop">
     <div class="hero-body">
         <div class="section-title">
@@ -517,7 +517,7 @@
           <div class="carousel-content">
             <div class="publication-img">
               <video id="slideshow" style="width:100%; margin-top:10px;margin-bottom:10px;" autoplay="" muted="" loop="" playsinline="" controls>
-                <source src="./assets/images/open-2.mov" type="video/mp4">
+                <source src="./assets/images/open-2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </div>   
           </div>
