--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 <!-- Abstract. -->
 <section>
-  <div class="container is-max-desktop" style="width: 30%; max-width: none;">
+  <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered" style="margin-top: 10px; margin-bottom: 0px;">
       <div class="column is-four-fifths">
         <h2 class="title is-3 is-centered">Abstract</h2>
