--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
 <!--/ Abstract. -->
 
 
-
+<!-- style="width: 50%; max-width: none;" -->
 
 <!--  Evaluation Agent Framework. -->
 <section class="section" style="margin-top:0px; margin-bottom:50px;">
-  <div class="container is-max-desktop" style="width: 41%; max-width: none;">
+  <div class="container is-max-desktop">
     <div class="hero-body">
         <div class="section-title">
           <h2 class="title is-3 is-centered">Pipeline of Evaluation Agent Framework</h2>
@@ -244,10 +244,11 @@
 
 </style>
 
+<!-- style="width: 43%; max-width: none;" -->
 
 <!--  Comparison between the Evaluation Agent Framework and other T2I/T2V Benchmarks. -->
 <section class="section" style="margin-top:-50px; margin-bottom:-80px;">
-  <div class="container is-max-desktop"  style="width: 43%; max-width: none;">
+  <div class="container is-max-desktop">
     <div class="hero-body">
         <div class="section-title">
           <h2 class="title is-3 is-centered">Comparing with Other T2I/T2V Benchmarks</h2>
