[update] index.html

--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
                 <span>GitHub</span>
               </a>
             </span>
-            <span class="link-block">
+            <!-- <span class="link-block">
               <a href="https://github.com/Vchitect/Evaluation-Agent" class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="far fa-images"></i>
                 </span>
                 <span>Dataset</span>
-              </a>
+              </a> -->
           </div>
 
         </div>
