--- a/index.html
+++ b/index.html
@@ -536,9 +536,10 @@
   <div class="container is-max-desktop content" style="margin-top: 40px; margin-bottom: 20px;">
     <h2 class="title">BibTeX</h2>
     <p>If you find our work useful, please consider citing our paper:</p>
-    <pre><code>@article{zhang2024evalagent,
-      author = {Zhang, Fan and Tian, Shulin and Huang, Ziqi and Qiao, Yu and Liu, Ziwei},
+    <pre><code>@article{zhang2024evaluationagent,
       title = {Evaluation Agent: Efficient and Promptable Evaluation Framework for Visual Generative Models},
+      author = {Zhang, Fan and Tian, Shulin and Huang, Ziqi and Qiao, Yu and Liu, Ziwei},
+      journal={arXiv preprint arXiv:2412.09645},
       year = {2024}
   }</code></pre>
   </div>
