--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="publication-links">
             <!-- Paper Link. -->
             <span class="link-block">
-              <a href="https://vchitect.github.io/Evaluation-Agent-project/" target="_blank"
+              <a href="https://arxiv.org/abs/2412.09645" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="ai ai-arxiv"></i>
@@ -551,7 +551,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="https://vchitect.github.io/Evaluation-Agent-project/">
+         href="https://arxiv.org/abs/2412.09645">
         <i class="fas fa-file-pdf"></i>
       </a>
       <a class="icon-link" href="https://github.com/Vchitect/Evaluation-Agent" class="external-link" disabled>
