--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
             </h1>
             <!-- <h1 class="title is-1 publication-title"><span style="color:#71a10a; font-weight: bold; font-style: italic">Evaluation Agent</span> : Efficient and Promptable<br>Evaluation Framework<br>for Visual Generative Models
               </h1> -->
+              <div class="is-size-5 publication-authors">
+                <span class="author-block">ACL 2025 (Main Conference), <br>
+                  <span style="color:red;">Oral, SAC Highlights Award (47 out of 8350)</span>
+                </span>
+            </div>
+            <br>
 
           <div class="is-size-5 publication-authors">
             <span class="author-block">
@@ -64,7 +70,7 @@
               <a href="https://shulin16.github.io/" target="_blank">Shulin Tian</a><sup>2*</sup>,
             </span>
             <span class="author-block">
-                <a href="https://ziqihuangg.github.io" target="_blank">Ziqi Huang</a><sup>2*</sup>,
+                <a href="https://ziqihuangg.github.io" target="_blank">Ziqi Huang</a><sup>2*‡</sup>,
             </span>
             <span class="author-block">
               <a href="http://mmlab.siat.ac.cn/yuqiao/index.html" target="_blank">Yu Qiao</a><sup>1&#8224</sup>,
@@ -76,7 +82,7 @@
           <!-- <br> -->
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block">(* equal contributions, &#8224 corresponding authors) </span>
+            <span class="author-block">(* equal contributions.  ‡ project lead.  &#8224 corresponding authors) </span>
           </div>
 
         <div class="is-size-5 publication-authors">
@@ -536,12 +542,33 @@
   <div class="container is-max-desktop content" style="margin-top: 40px; margin-bottom: 20px;">
     <h2 class="title">BibTeX</h2>
     <p>If you find our work useful, please consider citing our paper:</p>
-    <pre><code>@article{zhang2024evaluationagent,
+    <pre><code>@InProceedings{zhang2024evaluationagent,
       title = {Evaluation Agent: Efficient and Promptable Evaluation Framework for Visual Generative Models},
       author = {Zhang, Fan and Tian, Shulin and Huang, Ziqi and Qiao, Yu and Liu, Ziwei},
-      journal={arXiv preprint arXiv:2412.09645},
-      year = {2024}
+      booktitle={Annual Meeting of the Association for Computational Linguistics (ACL), 2025},
+      year = {2025}
   }</code></pre>
+  <p>Our related projects in evaluation of visual generation:</p>
+  <pre><code>@InProceedings{huang2023vbench,
+    title={{VBench}: Comprehensive Benchmark Suite for Video Generative Models},
+    author={Huang, Ziqi and He, Yinan and Yu, Jiashuo and Zhang, Fan and Si, Chenyang and Jiang, Yuming and Zhang, Yuanhan and Wu, Tianxing and Jin, Qingyang and Chanpaisit, Nattapol and Wang, Yaohui and Chen, Xinyuan and Wang, Limin and Lin, Dahua and Qiao, Yu and Liu, Ziwei},
+    booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+    year={2024}
+}
+
+@article{huang2024vbench++,
+    title={{VBench++}: Comprehensive and Versatile Benchmark Suite for Video Generative Models},
+    author={Huang, Ziqi and Zhang, Fan and Xu, Xiaojie and He, Yinan and Yu, Jiashuo and Dong, Ziyue and Ma, Qianli and Chanpaisit, Nattapol and Si, Chenyang and Jiang, Yuming and Wang, Yaohui and Chen, Xinyuan and Chen, Ying-Cong and Wang, Limin and Lin, Dahua and Qiao, Yu and Liu, Ziwei},
+    journal={arXiv preprint arXiv:2411.13503},
+    year={2024}
+}
+
+@article{zheng2025vbench2,
+    title={{VBench-2.0}: Advancing Video Generation Benchmark Suite for Intrinsic Faithfulness},
+    author={Zheng, Dian and Huang, Ziqi and Liu, Hongbo and Zou, Kai and He, Yinan and Zhang, Fan and Zhang, Yuanhan and He, Jingwen and Zheng, Wei-Shi and Qiao, Yu and Liu, Ziwei},
+    journal={arXiv preprint arXiv:2503.21755},
+    year={2025}
+}</code></pre>
   </div>
 </section>
 
