--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <a href="https://shulin16.github.io/" target="_blank">Shulin Tian</a><sup>2*</sup>,
             </span>
             <span class="author-block">
-                <a href="https://ziqihuangg.github.io" target="_blank">Ziqi Huang</a><sup>2*‡</sup>,
+                <a href="https://ziqihuangg.github.io" target="_blank">Ziqi Huang</a><sup>2‡*</sup>,
             </span>
             <span class="author-block">
               <a href="http://mmlab.siat.ac.cn/yuqiao/index.html" target="_blank">Yu Qiao</a><sup>1&#8224</sup>,
@@ -548,7 +548,10 @@
       booktitle={Annual Meeting of the Association for Computational Linguistics (ACL), 2025},
       year = {2025}
   }</code></pre>
-  <p>Our related projects in evaluation of visual generation:</p>
+  <p>
+    Our related projects in evaluation of visual generation 
+    (<a href="https://github.com/ziqihuangg/Awesome-Evaluation-of-Visual-Generation">GitHub Repo</a>)
+  </p>
   <pre><code>@InProceedings{huang2023vbench,
     title={{VBench}: Comprehensive Benchmark Suite for Video Generative Models},
     author={Huang, Ziqi and He, Yinan and Yu, Jiashuo and Zhang, Fan and Si, Chenyang and Jiang, Yuming and Zhang, Yuanhan and Wu, Tianxing and Jin, Qingyang and Chanpaisit, Nattapol and Wang, Yaohui and Chen, Xinyuan and Wang, Limin and Lin, Dahua and Qiao, Yu and Liu, Ziwei},
